# midi_visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
src/: ballDropAnimation.cpp  ballDropAnimation.h  ballLaunchAnimation.cpp  ballLaunchAnimation.h  main.cpp  midiParser.cpp  midiParser.h  midi_parser.cpp  midi_parser.h  noteGraph.cpp  noteGraph.h
